<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_master"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_master_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_add_master"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/name_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:hint="@string/text_name" />
        <EditText
            android:id="@+id/name_second_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:hint="@string/text_second_name" />
        <EditText
            android:id="@+id/address_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:hint="@string/text_address_master"/>

        <Button
            android:id="@+id/btn_save_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickSaveMaster"
            android:text="@string/btn_text_master_save"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickBack"
            android:text="@string/btn_back"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>



</RelativeLayout>