<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_master" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/auth_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/auth_tv"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/et_number_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textColorHint="@color/hint"
            android:inputType="phone"
            android:hint="@string/auth_hint"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textColorHint="@color/hint"
            android:inputType="textPassword"
            android:hint="@string/auth_hint_pass"/>

        <Button
            android:id="@+id/btn_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickEnter"
            android:text="@string/btn_auth"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickReg"
            android:text="@string/btn_reg"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>