<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_master" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:padding="10dp">
    <TextView
        android:id="@+id/text_your_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_your_order"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/et_your_master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textColorHint="@color/hint"
        android:inputType="number"
        android:hint="@string/hint_booking_master"/>
    <Button
        android:id="@+id/btn_your_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_master_and_press"
        android:onClick="onClickYourView"
        android:text="@string/btn_your_view"
        android:textColor="@color/white"
        android:textSize="15sp" />

        <ListView
            android:id="@+id/lv_order_your"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </ListView>
    <Button
        android:id="@+id/btn_order_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_master_and_press"
        android:onClick="onClickOrderMenu"
        android:text="@string/btn_booking_menu"
        android:textColor="@color/white"
        android:textSize="15sp" />



    </LinearLayout>
</RelativeLayout>