<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_master" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/order_n"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/et_booking_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/text_order_json"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/text_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_booking"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_booking_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textColorHint="@color/hint"
            android:inputType="number"
            android:hint="@string/hint_booking_master"/>
        <Button
            android:id="@+id/btn_save_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickSaveBooking"
            android:text="@string/btn_booking_save"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <Button
            android:id="@+id/btn_booking_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickBookingMenu"
            android:text="@string/btn_booking_menu"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>