<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_master" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:padding="10dp">



        <TextView
            android:id="@+id/text_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_order"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:hint="@string/example_date_hint"/>

        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_master_and_press"
            android:onClick="onClickOrderFromBase"
            android:text="@string/btn_order_from_base"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <ListView
            android:id="@+id/lv_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </ListView>

    </LinearLayout>


</RelativeLayout>